--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.3.0",
     "react-spinners": "^0.12.0",
+    "react-to-print": "^2.14.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
