--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "es-abstract": "^1.20.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-mailchimp-subscribe": "^2.1.3",
